test/fixtures/syntaxerrors/g.lys.ast.desugar
|-Document(0,25)
  |-(AstCons)
    |-FunctionDirective(0,22)
      |-(AstCons)
        |-Decorators(0,0)
          <Rule0>
        |-(AstCons)
          |-PrivateModifier(0,8)
            <Rule0>
          |-FunDeclaration(8,22)
            |-(AstCons)
              |-NameIdentifier(12,16)
                |-Identifier=test
              |-(AstCons)
                |-TypeParameters(16,16)
                  <Rule0>
                |-(AstCons)
                  |-FunctionParamsList(16,18)
                    |-(List)(17,17)
                      <Rule0>
                  |-(AstCons)
                    |-ReturnType(19,19)
                      <Rule0>
                    |-FunctionBody(19,22)
                      |-NumberLiteral=2
    |-EndOfFile=